--- a/Distribution Sorting Algorithm.ipynb
+++ b/Distribution Sorting Algorithm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set random seed\n",
+    "np.random.seed(0)\n",
+    "\n",
     "# Create dataframe\n",
     "data = pd.DataFrame(index = range(1500), columns = ['prop-1', 'prop-2', 'consequence'])\n",
     "\n",
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -98,31 +101,31 @@
        "      <th>0</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1.61085</td>\n",
+       "      <td>1.76405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0874867</td>\n",
+       "      <td>0.400157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.222743</td>\n",
+       "      <td>0.978738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.38703</td>\n",
+       "      <td>2.24089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.58597</td>\n",
+       "      <td>1.86756</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -130,14 +133,14 @@
       ],
       "text/plain": [
        "  prop-1 prop-2 consequence\n",
-       "0      A      1    -1.61085\n",
-       "1      A      1   0.0874867\n",
-       "2      A      1    0.222743\n",
-       "3      A      1     1.38703\n",
-       "4      A      1     1.58597"
+       "0      A      1     1.76405\n",
+       "1      A      1    0.400157\n",
+       "2      A      1    0.978738\n",
+       "3      A      1     2.24089\n",
+       "4      A      1     1.86756"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -182,31 +185,31 @@
        "      <th>1495</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.383376</td>\n",
+       "      <td>1.72376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1496</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.416639</td>\n",
+       "      <td>0.639094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1497</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.90259</td>\n",
+       "      <td>1.42104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1498</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.129283</td>\n",
+       "      <td>-0.076561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1499</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>2.56419</td>\n",
+       "      <td>0.24179</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,14 +217,14 @@
       ],
       "text/plain": [
        "     prop-1 prop-2 consequence\n",
-       "1495      C      3    0.383376\n",
-       "1496      C      3    0.416639\n",
-       "1497      C      3     1.90259\n",
-       "1498      C      3   -0.129283\n",
-       "1499      C      3     2.56419"
+       "1495      C      3     1.72376\n",
+       "1496      C      3    0.639094\n",
+       "1497      C      3     1.42104\n",
+       "1498      C      3   -0.076561\n",
+       "1499      C      3     0.24179"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,13 +266,13 @@
     "    dist_mat = np.zeros(shape = (n, n))\n",
     "    \n",
     "    # Create boolean function\n",
-    "    boo = lambda k: ((data[columns] == results.loc[k, columns]).prod(axis = 1)).astype(bool)\n",
+    "    bool_fun = lambda k: ((data[columns] == results.loc[k, columns]).prod(axis = 1)).astype(bool)\n",
     "    \n",
     "    for i in range(n):\n",
     "        for j in range(i):\n",
     "                \n",
     "            # Distance is pad minus ks-test p-value\n",
-    "            dist_mat[i, j] = pad - ks_2samp(data.loc[boo(i), 'consequence'], data.loc[boo(j), 'consequence'])[1]\n",
+    "            dist_mat[i, j] = pad - ks_2samp(data.loc[bool_fun(i), 'consequence'], data.loc[bool_fun(j), 'consequence'])[1]\n",
     "                \n",
     "            # Must be symmetric matrix\n",
     "            dist_mat[j, i] = dist_mat[i, j]               \n",
@@ -300,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -334,31 +337,31 @@
        "      <th>0</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>B</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>B</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>C</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -366,14 +369,14 @@
       ],
       "text/plain": [
        "  prop-1 prop-2  cluster\n",
-       "0      A      1        0\n",
-       "1      A      2        0\n",
-       "2      B      2        1\n",
-       "3      B      3        1\n",
-       "4      C      3        2"
+       "0      A      1        2\n",
+       "1      A      2        2\n",
+       "2      B      2        0\n",
+       "3      B      3        0\n",
+       "4      C      3        1"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
