Small changes in text
It reads a little better now.

--- a/Pareto - MLE Parameter Estimation.ipynb
+++ b/Pareto - MLE Parameter Estimation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "We will obtain MLE Pareto parameter estimates and construct a 95 percent confidence interval for our parameter."
+    "We will obtain MLE Pareto parameter estimates and construct a 95 percent confidence interval for the parameters."
    ]
   },
   {
@@ -36,11 +36,11 @@
     "$$\n",
     "f(x) = \\begin{cases} \\frac{1}{\\sigma} \\left(1 + \\xi\\left(\\frac{x - \\mu}{\\sigma}\\right)\\right)^{-1/\\xi - 1}, & x\\geq \\mu\\\\ 0, &\\text{otherwise}\\end{cases}\n",
     "$$\n",
-    "when $\\xi \\neq 0$ and \n",
+    "when $\\xi \\neq 0$, and \n",
     "$$\n",
     "f(x) = \\begin{cases} \\frac{1}{\\sigma} \\exp\\left(-\\frac{x-\\mu}{\\sigma}\\right), & x\\geq \\mu\\\\ 0, &\\text{otherwise}\\end{cases}\n",
     "$$\n",
-    "when $\\xi = 0$. In these forms the SciPy parameters $c$, loc, and scale are $\\xi$, $\\mu$, and $\\sigma$, respectively. SciPy's Pareto functions will not be used after the generation of the random numbers. "
+    "when $\\xi = 0$. SciPy parameters' $c$, loc, and scale are $\\xi$, $\\mu$, and $\\sigma$, respectively. SciPy's Pareto functions will not be used after the generation of the random numbers. "
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will construct our pdf, cdf, and ppf. The pdf will be used within the log liklihood function, and we will check how well our result fits the data using the cdf. The ppf function will be used to generate random numbers from the Pareto distribution later."
+    "The Pareto distribution's pdf, cdf, and ppf are defined below. The pdf will be used within the log liklihood function, and we will check how well our results fit the data using the cdf. The ppf function will be used to generate random numbers from the Pareto distribution later."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "metadata": {},
    "source": [
     "# Confidence interval\n",
-    "The next step is to use our parameter estimates to obtain a confidence interval. In particular, we will use the parameters we found before to generate random numbers from the Pareto distribution and then calculate what our parameter estimate would be if the randomly generated numbers were our original data. Standard practice is to generate 10,000 sets of size 100, but we will reduce this to 1,000 to reduce computation time."
+    "The next step is to use our parameter estimates to obtain a confidence interval. In particular, we will use the parameters we found before to generate random numbers from the Pareto distribution and then calculate what our parameter estimates would be if the randomly generated numbers were our original data. Standard practice is to generate 10,000 sets of size 100, but we will reduce this to 1,000 to lower computation time."
    ]
   },
   {
@@ -440,7 +440,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. The intervals for $\\sigma$ (sigma) and $\\xi$ (xi) are reasonable; the true parameters lie in about the middle of their corresponding intervals."
+    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. This illustrates why $\\mu$ is often defined prior to MLE estimates via a user defined choice of domain.  \n",
+    "\n",
+    "The intervals for $\\sigma$ (sigma) and $\\xi$ (xi) are reasonable; the true parameters lie in about the middle of their corresponding intervals."
    ]
   },
   {
