--- a/Pareto - MLE Parameter Estimation.ipynb
+++ b/Pareto - MLE Parameter Estimation.ipynb
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. This illustrates why $\\mu$ is often defined prior to MLE estimates via a user defined choice of domain.  \n",
+    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. This illustrates why $\\mu$ is often defined prior to MLE parameter estimation via a user defined choice of domain.  \n",
     "\n",
     "The intervals for $\\sigma$ (sigma) and $\\xi$ (xi) are reasonable; the true parameters lie in about the middle of their corresponding intervals."
    ]
