--- a/Random Number Generation.ipynb
+++ b/Random Number Generation.ipynb
@@ -326,11 +326,9 @@
     "    \n",
     "    return result\n",
     "\n",
-    "beta = 1\n",
+    "test_set = gen_exp(beta = 1, size = size, seed = 0)\n",
     "\n",
-    "test_set = gen_exp(beta = beta, size = size, seed = 0)\n",
-    "\n",
-    "stats.probplot(test_set, sparams = (1), dist = \"expon\", fit = False, plot = pylab)\n",
+    "stats.probplot(test_set, sparams = (1/1), dist = \"expon\", fit = False, plot = pylab)\n",
     "pylab.show()"
    ]
   },
