Limit of algorithm
The algorithm only works for continuous distributions.

--- a/Distribution Sorting Algorithm.ipynb
+++ b/Distribution Sorting Algorithm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Objective\n",
     "\n",
-    "We will create an alogrithm which sorts data into clusters of similar distributions."
+    "We will create an alogrithm which sorts data into clusters of similar distributions. The algorithm only works when the distributions are continuous."
    ]
   },
   {
