Estimates or estimator...
still confusing but better

--- a/Pareto - MLE Parameter Estimation.ipynb
+++ b/Pareto - MLE Parameter Estimation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "We will obtain MLE Pareto parameter estimates and construct a 95 percent confidence interval for the parameters."
+    "We will obtain MLE Pareto parameters and construct a 95 percent confidence interval for them."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will create the data which we will use to fit our distribution with the generalized Pareto distribution in SciPy's statistics module.  The generalized Pareto distribution has a probability density function of the form\n",
+    "We will create our data with the generalized Pareto distribution in SciPy's statistics module.  The data will be used to fit our distribution. The generalized Pareto distribution has a probability density function of the form\n",
     "$$\n",
     "f(x) = \\begin{cases} \\frac{1}{\\sigma} \\left(1 + \\xi\\left(\\frac{x - \\mu}{\\sigma}\\right)\\right)^{-1/\\xi - 1}, & x\\geq \\mu\\\\ 0, &\\text{otherwise}\\end{cases}\n",
     "$$\n",
@@ -40,7 +40,7 @@
     "$$\n",
     "f(x) = \\begin{cases} \\frac{1}{\\sigma} \\exp\\left(-\\frac{x-\\mu}{\\sigma}\\right), & x\\geq \\mu\\\\ 0, &\\text{otherwise}\\end{cases}\n",
     "$$\n",
-    "when $\\xi = 0$. SciPy parameters' $c$, loc, and scale are $\\xi$, $\\mu$, and $\\sigma$, respectively. SciPy's Pareto functions will not be used after the generation of the random numbers. "
+    "when $\\xi = 0$. SciPy parameters' $c$, loc, and scale correspond to the above values of $\\xi$, $\\mu$, and $\\sigma$, respectively. SciPy's Pareto functions will not be used after the generation of the random numbers. "
    ]
   },
   {
@@ -432,8 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. This illustrates why $\\mu$ is often defined prior to MLE parameter estimation via a user defined choice of domain.  \n",
-    "\n",
+    "The confidence interval for $\\mu$ (mu) does not include 0 because there were probably no samples which contained 0 as a datapoint. This illustrates why $\\mu$ is often defined prior to MLE calculation via a user defined choice of domain.  \n",
     "The intervals for $\\sigma$ (sigma) and $\\xi$ (xi) are reasonable; the true parameters lie in about the middle of their corresponding intervals."
    ]
   },
