--- a/Mixture Model - EM Algorithm.ipynb
+++ b/Mixture Model - EM Algorithm.ipynb
@@ -9,8 +9,8 @@
     "$$\n",
     "f(x) = \\frac{0.6}{\\sqrt{2\\pi}}\\exp\\left[-\\frac{x^2}{2}\\right] + \\frac{0.4}{\\sqrt{2\\pi}}\\exp\\left[-\\frac{\\left(x - 4\\right)^2}{2}\\right]\n",
     "$$\n",
-    "for this exercise, *i.e.* the distribution is a mixutre of two normals. We will use $f$ to generate $x_1, x_2,\\ldots, x_n$ and then use the expectionation maximization algorithm to obtain our parameter estimates. Notice that the standard deviation is identical (and equal to 1) for each of the two normal probability density functions. We will treat the following as known attributes: \n",
-    "* the distribution of the data is a mixture two normal distributions, and\n",
+    "for this exercise, *i.e.* the distribution is a mixutre of two normals. We will use $f$ to generate $x_1, x_2,\\ldots, x_n$ and then use the expectionation maximization algorithm to obtain our estimators. Notice that the standard deviation is identical (and equal to 1) for each of the two normal probability density functions. We will treat the following as known: \n",
+    "* the distribution of the data is a mixture of two normal distributions, and\n",
     "* the standard devaitions for the two distributions in the mixture are identical. \n",
     "\n",
     "This code was heavily influenced by R code from the UCSC Coursera course *Bayesian Statistics: Mixture Models*. Click [here](https://www.coursera.org/learn/mixture-models/supplement/H81ay/sample-code-for-em-example-1) for more details.\n",
@@ -227,7 +227,7 @@
    "source": [
     "# Results\n",
     "\n",
-    "We will first plot $Q$ as a function $n$. It shows that we quickly converged to the parameter estimates. After about the 7th iteration, the graph becomes almost flat."
+    "We will first plot $Q_n$ as a function $n$. It shows that we quickly converges. After about the 7th iteration, the graph becomes almost flat."
    ]
   },
   {
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, we will examine the graph of our estimated pdf and the true pdf. As can be seen, the estimated density is close to the true one. Our conclusions are strong, especially given that we only used 100 points."
+    "Lastly, we will examine the graph of our estimated pdf and the true pdf. As can be seen, the estimated density is close to the true one. This suggested that the calculated estimators are good proxies for the true parameters. Our conclusions are strong, especially given that we only used 100 points."
    ]
   },
   {
