Changed boolean to var called stop

--- a/Mixture Model - EM Algorithm.ipynb
+++ b/Mixture Model - EM Algorithm.ipynb
@@ -139,7 +139,6 @@
     "sigma = np.std(x)\n",
     "mu = np.array([np.mean(x) - sigma, np.mean(x) + sigma])\n",
     "s = 0\n",
-    "sw = False\n",
     "Q = -np.Inf\n",
     "Q_out = None\n",
     "epsilon = 10**-6\n",
@@ -174,8 +173,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Turned to true when relative chance in Q less than epsilon\n",
+    "stop = False\n",
+    "\n",
     "# Run algorithm\n",
-    "while sw == False:\n",
+    "while stop == True:\n",
     "    \n",
     "    # Initialize v\n",
     "    v = np.reshape(np.zeros(n * K), (n, K))\n",
@@ -212,7 +214,7 @@
     "    \n",
     "    if np.abs(1 - Q/Qn) < epsilon:\n",
     "        \n",
-    "        sw = True\n",
+    "        stop = True\n",
     "           \n",
     "    Q = Qn\n",
     "    \n",
