Vectorize calculation of v

--- a/Mixture Model - EM Algorithm.ipynb
+++ b/Mixture Model - EM Algorithm.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
     "stop = False\n",
     "\n",
     "# Run algorithm\n",
-    "while stop == True:\n",
+    "while stop == False:\n",
     "    \n",
     "    # Initialize v\n",
     "    v = np.reshape(np.zeros(n * K), (n, K))\n",
@@ -186,10 +186,14 @@
     "    v[: , 0] = np.log(w[0]) + stats.norm.logpdf(x, loc = mu[0], scale = sigma)\n",
     "    v[: , 1] = np.log(w[1]) + stats.norm.logpdf(x, loc = mu[1], scale = sigma)\n",
     "    \n",
-    "    for i in range(n):\n",
-    "        \n",
-    "        # Convert v-values to maintain numerical stability\n",
-    "        v[i, :] = np.exp(v[i , :] - np.max(v[i , :]))/np.sum(np.exp(v[i , :] - np.max(v[i , :])))\n",
+    "    # Calculate max of each row\n",
+    "    v_max = np.reshape(np.max(v, axis = 1), newshape = (n, 1))\n",
+    "    \n",
+    "    # Calculate sum of each row\n",
+    "    v_sum = np.reshape(np.sum(np.exp(v - v_max), axis = 1), newshape = (n, 1))\n",
+    "    \n",
+    "    # Convert v-values to maintain numerical stability\n",
+    "    v = np.exp(v - v_max)/v_sum\n",
     "    \n",
     "    # Take the average of each column to obtain weights\n",
     "    w = np.mean(v, axis = 0)\n",
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
