--- a/Mixture Model - EM Algorithm.ipynb
+++ b/Mixture Model - EM Algorithm.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Turned to true when relative chance in Q less than epsilon\n",
+    "# Turned to true when relative change in Q less than epsilon\n",
     "stop = False\n",
     "\n",
     "# Run algorithm\n",
@@ -233,7 +233,7 @@
    "source": [
     "# Results\n",
     "\n",
-    "We will first plot $Q_n$ as a function $n$. It shows that we quickly converges. After about the 7th iteration, the graph becomes almost flat."
+    "We will first plot $Q_n$ as a function $n$. It shows that the algorithm quickly converges. After about the 7th iteration, the graph becomes almost flat."
    ]
   },
   {
