--- a/Distribution Sorting Algorithm.ipynb
+++ b/Distribution Sorting Algorithm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +56,18 @@
     "data = pd.DataFrame(index = range(1500), columns = ['prop-1', 'prop-2', 'consequence'])\n",
     "\n",
     "# Create labels\n",
-    "data.loc[0:499, 'prop-1'], data.loc[500:999, 'prop-1'], data.loc[1000:1499, 'prop-1'] = 'A', 'B', 'C'\n",
-    "data.loc[0:249, 'prop-2'], data.loc[250:749, 'prop-2'], data.loc[750:, 'prop-2'] = 1, 2, 3\n",
+    "data.loc[0:499, 'prop-1'], data.loc[500:999, 'prop-1'], data.loc[1000: , 'prop-1'] = 'A', 'B', 'C'\n",
+    "data.loc[0:249, 'prop-2'], data.loc[250:749, 'prop-2'], data.loc[750: , 'prop-2'] = 1, 2, 3\n",
     "\n",
     "# Generate random numbers\n",
     "data.loc[0:499, 'consequence'] = normal(loc = 0, scale = 1, size = 500)\n",
     "data.loc[500:999, 'consequence'] = uniform(low = -1, high = 1, size = 500)\n",
-    "data.loc[1000:1499, 'consequence'] = normal(loc = 0.25, scale = 1, size = 500)"
+    "data.loc[1000: , 'consequence'] = normal(loc = 0.25, scale = 1, size = 500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4      A      1     1.86756"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "1499      C      3     0.24179"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "4      C      3        1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
