--- a/Metropolis algorithm.ipynb
+++ b/Metropolis algorithm.ipynb
@@ -7,7 +7,7 @@
     "## Introduction/Abstract\n",
     "We will use the Metropolis algorithm to compute the first three moments of a distribution with probability density function proportional to\n",
     "$$\n",
-    "f(x) := \\begin{cases} \\sin(x^2), & \\sqrt{\\pi}\\leq x \\leq \\sqrt{\\pi}\\\\ 0, & \\text{otherwise.}\\end{cases}\n",
+    "f(x) := \\begin{cases} \\sin(x^2), & -\\sqrt{\\pi}\\leq x \\leq \\sqrt{\\pi}\\\\ 0, & \\text{otherwise.}\\end{cases}\n",
     "$$\n",
     "We note that the first and third moments should be 0 due to original symmetry. The second moment is a complete mystery!\n"
    ]
