--- a/Mixture Model - EM Algorithm.ipynb
+++ b/Mixture Model - EM Algorithm.ipynb
@@ -182,9 +182,9 @@
     "    # Initialize v\n",
     "    v = np.reshape(np.zeros(n * K), (n, K))\n",
     "    \n",
-    "    # Calculate values for v in this iteration \n",
-    "    v[: , 0] = np.log(w[0]) + stats.norm.logpdf(x, loc = mu[0], scale = sigma)\n",
-    "    v[: , 1] = np.log(w[1]) + stats.norm.logpdf(x, loc = mu[1], scale = sigma)\n",
+    "    # Calculate values for v in this iteration\n",
+    "    for k in range(K):\n",
+    "        v[: , k] = np.log(w[k]) + stats.norm.logpdf(x, loc = mu[k], scale = sigma)\n",
     "    \n",
     "    # Calculate max of each row\n",
     "    v_max = np.reshape(np.max(v, axis = 1), newshape = (n, 1))\n",
