Rendering problem. Hope this fixes it.

--- a/Mixture Model - MCMC.ipynb
+++ b/Mixture Model - MCMC.ipynb
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "# Number of iterations and burn-in peroid\n",
+    "# Number of iterations and burn-in period\n",
     "itrs = 11000\n",
     "burn = 1000\n",
     "\n",
